cmake_minimum_required(VERSION 2.8)
project ( cvtest )
find_package( OpenCV REQUIRED)
find_package(Threads REQUIRED)
if(THREADS_HAVE_PTHREAD_ARG)
  set_property(TARGET cvtest PROPERTY COMPILE_OPTIONS "-pthread")
  set_property(TARGET cvtest PROPERTY INTERFACE_COMPILE_OPTIONS "-pthread")
endif()
find_library(WIRINGPI_LIBRARIES NAMES wiringPi)
find_path(WIRINGPI_INCLUDE_DIRS NAMES wiringPi.h)
include(FindPackageHandleStandardArgs)
find_package_handle_standard_args(wiringPi DEFAULT_MSG WIRINGPI_LIBRARIES WIRINGPI_INCLUDE_DIRS)
mark_as_advanced(WIRINGPI_LIBRARIES WIRING_PI_INCLUDE_DIRS)
file(GLOB SRCS *.cpp *.hpp)
add_executable( cvtest ${SRCS} )
add_definitions(-std=c++0x -lwiringPi -lpthread)
target_link_libraries( cvtest ${OpenCV_LIBS} )
target_link_libraries( cvtest ${WIRINGPI_LIBRARIES})
if(CMAKE_THREAD_LIBS_INIT)
  target_link_libraries(cvtest "${CMAKE_THREAD_LIBS_INIT}")
endif()	
